# wordnet_cpp

./: CMakeLists.txt  binsrch.c  morph.c  search.c  wn.h  wn_db.cpp  wn_db.h  wnutil.c
